# Nemo-Gaurdrail

./: .gitignore  LICENSE  README.md  pyproject.toml  send_chat_request.py
config/: config.yml
src/: main.py
src/api/: chatgroq_client.py
src/guardrails/: base.py  citation_enforcer.py  length_control.py  manager.py  topic_filter.py  toxicity_filter.py
src/models/: schemas.py
src/nemo_guardrails_chatgroq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/static/: index.html
tests/: test_api.py  test_guardrails.py
